examples/test/testpolicy17055.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17055
  namespace: namespace244
spec:
  podSelector:
    matchLabels:
      key46: value39
      key18: value29
      key10: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value25
      podSelector:
        matchLabels:
          key14: value13
          key20: value26
